# SimpleWebMessenger

./: .gitignore  Makefile  README.md  all_requirements.txt  docker-compose.yaml  manual_requirements.txt  requirements.txt
.github/workflows/: main.yml
auth-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
auth-service/migrations/: env.py
auth-service/src/: config.py  dependencies.py  exceptions.py  main.py
auth-service/src/api/: auth.py  users.py
auth-service/src/database/: database.py
auth-service/tests/: conftest.py  test_auth.py
auth_service/: .dockerignore  .env_example  .test.env  Dockerfile  alembic.ini  auth_start.sh  pyproject.toml  pytest.ini  requirements.txt
auth_service/migrations/: env.py
auth_service/src/: config.py  dependencies.py  exceptions.py  main.py
auth_service/src/api/: auth.py  users.py
auth_service/src/core/database/: database.py
auth_service/src/core/database/models/: __init__.py  base.py  device.py  user.py
auth_service/src/core/repositories/: device_repository.py  user_repository.py
auth_service/src/core/schemas/: device.py
auth_service/src/database/repositories/: user_repository.py
auth_service/src/database/schemas/: user_schemas.py
auth_service/src/services/: auth_service.py  redis_service.py  token_service.py  user_service.py
auth_service/src/utils/: auth.py  location.py
auth_service/tests/: conftest.py  test_auth.py
auth_service/tests/integration_tests/: conftest.py  test_auth.py
auth_service/tests/unit_tests/: test_token_service.py
docker/: docker-compose.yaml
(+13 files in other folders)
