[tool.poetry]
name = "auth_service"
version = "0.1.0"
description = "Microservice for authentication users."
authors = ["Crusazer <crusazer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
pyjwt = "^2.9.0"
pydantic = { extras = ["email"], version = "^2.9.1" }
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
cryptography = "^43.0.1"
redis = "^5.0.8"
pytest = "^8.3.3"
pytest-async = "^0.1.1"
httpx = "^0.27.2"
user-agents = "^2.2.0"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
